translation-tool/inputs/source_meta/objects/HSvc_ChronicRule__c.object
<CustomObject>
    <description>This is the custom object created to store the chronic rules.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Chronic Rules</relationshipLabel>
        <relationshipName>Chronic_Rules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ActualIssue__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ack customer</fullName>
                </value>
                <value>
                    <fullName>Added</fullName>
                </value>
                <value>
                    <fullName>Adjust appointment</fullName>
                </value>
                <value>
                    <fullName>Adjust service</fullName>
                </value>
                <value>
                    <fullName>Apply adjustment</fullName>
                </value>
                <value>
                    <fullName>Apply adjustments</fullName>
                </value>
                <value>
                    <fullName>Apply credits</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Escalate</fullName>
                </value>
                <value>
                    <fullName>Explain charges</fullName>
                </value>
                <value>
                    <fullName>Inform customer</fullName>
                </value>
                <value>
                    <fullName>Inform Hughes CS</fullName>
                </value>
                <value>
                    <fullName>Inform Installation team</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Not Processed</fullName>
                </value>
                <value>
                    <fullName>Other (Explain in Notes)</fullName>
                </value>
                <value>
                    <fullName>Pending Cancel</fullName>
                </value>
                <value>
                    <fullName>Pending Not Account holder</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Process Cancellation</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Process Partial Payment</fullName>
                </value>
                <value>
                    <fullName>Process Payment</fullName>
                </value>
                <value>
                    <fullName>Provide customer correct information</fullName>
                </value>
                <value>
                    <fullName>Provide information details</fullName>
                </value>
                <value>
                    <fullName>Readjust appointment</fullName>
                </value>
                <value>
                    <fullName>Refer to Installation</fullName>
                </value>
                <value>
                    <fullName>Refer to Retention</fullName>
                </value>
                <value>
                    <fullName>Report to Installation</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ActualIssue__c</fullName>
        <label>Actual Issue</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CustomerRequestType__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3rd Party Application</fullName>
                </value>
                <value>
                    <fullName>3rd Party Application Issue</fullName>
                </value>
                <value>
                    <fullName>3rd party Device Issue</fullName>
                </value>
                <value>
                    <fullName>3rd Party Equip</fullName>
                </value>
                <value>
                    <fullName>Ability to Solve Issue</fullName>
                </value>
                <value>
                    <fullName>Accessibility/Wait times</fullName>
                </value>
                <value>
                    <fullName>Account not Set-up</fullName>
                </value>
                <value>
                    <fullName>Account Past Due</fullName>
                </value>
                <value>
                    <fullName>Activation Failure</fullName>
                </value>
                <value>
                    <fullName>Add Authorized User</fullName>
                </value>
                <value>
                    <fullName>Add Core Service</fullName>
                </value>
                <value>
                    <fullName>Add New Core Service</fullName>
                </value>
                <value>
                    <fullName>Add New Premium Service</fullName>
                </value>
                <value>
                    <fullName>Add Premium Service</fullName>
                </value>
                <value>
                    <fullName>Add professional Voice Install</fullName>
                </value>
                <value>
                    <fullName>Add Voice Service</fullName>
                </value>
                <value>
                    <fullName>Add Wireless Router</fullName>
                </value>
                <value>
                    <fullName>Adjust service</fullName>
                </value>
                <value>
                    <fullName>Administrator login</fullName>
                </value>
                <value>
                    <fullName>Advertising/Marketing Accuracy</fullName>
                </value>
                <value>
                    <fullName>Agent Courtesy</fullName>
                </value>
                <value>
                    <fullName>Agent Courtesy/Professionalism</fullName>
                </value>
                <value>
                    <fullName>Agent Understandability</fullName>
                </value>
                <value>
                    <fullName>AP Issue</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Application Issue</fullName>
                </value>
                <value>
                    <fullName>Application Issue - Customer</fullName>
                </value>
                <value>
                    <fullName>Application Issue - hughes</fullName>
                </value>
                <value>
                    <fullName>Apply Static IP</fullName>
                </value>
                <value>
                    <fullName>Appointment Confirmation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApplytoChildAccounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply to Child Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseRecordType__c</fullName>
        <label>Case Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B2B General Case</fullName>
                </value>
                <value>
                    <fullName>B2C General Case</fullName>
                </value>
                <value>
                    <fullName>Repair Work Order</fullName>
                </value>
                <value>
                    <fullName>Install Work Order</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
                <value>
                    <fullName>Office Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseSubType__c</fullName>
        <label>Case Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CaseType__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Maintenance</fullName>
                </value>
                <value>
                    <fullName>Approvals</fullName>
                </value>
                <value>
                    <fullName>Billing Issue</fullName>
                </value>
                <value>
                    <fullName>Cancel Core Service (Retention)</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Customer Communication</fullName>
                </value>
                <value>
                    <fullName>Customer Complaint</fullName>
                </value>
                <value>
                    <fullName>Customer follow-up</fullName>
                </value>
                <value>
                    <fullName>Discovery Error</fullName>
                </value>
                <value>
                    <fullName>DVR request</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Equipment issue</fullName>
                </value>
                <value>
                    <fullName>Express Backup</fullName>
                </value>
                <value>
                    <fullName>Gateway Provisioning</fullName>
                </value>
                <value>
                    <fullName>General Questions</fullName>
                </value>
                <value>
                    <fullName>Hughes Truck Roll</fullName>
                </value>
                <value>
                    <fullName>Install Issue</fullName>
                </value>
                <value>
                    <fullName>Internet Service</fullName>
                </value>
                <value>
                    <fullName>Key FOB provisioning</fullName>
                </value>
                <value>
                    <fullName>Leased equipment</fullName>
                </value>
                <value>
                    <fullName>myHughesNet Issue</fullName>
                </value>
                <value>
                    <fullName>NAP Truck Roll</fullName>
                </value>
                <value>
                    <fullName>NE Esc</fullName>
                </value>
                <value>
                    <fullName>New Circuit</fullName>
                </value>
                <value>
                    <fullName>New Site Monitoring</fullName>
                </value>
                <value>
                    <fullName>NMC Esc</fullName>
                </value>
                <value>
                    <fullName>Offers/Programs</fullName>
                </value>
                <value>
                    <fullName>Order Modification</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outbound Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>HSvc_CaseTemplate__c.HSvc_Case_Type__c</field>
                <operation>equals</operation>
                <value>Chronic</value>
            </filterItems>
            <filterItems>
                <field>HSvc_CaseTemplate__c.HSvc_Available_to_Profile__c</field>
                <operation>equals</operation>
                <value>System</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HSvc_CaseTemplate__c</referenceTo>
        <relationshipLabel>Chronic Rules</relationshipLabel>
        <relationshipName>Chronic_Rules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseType__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CaseRecordType__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advanced Warranty Replacement</fullName>
                </value>
                <value>
                    <fullName>Chronic</fullName>
                </value>
                <value>
                    <fullName>NE Action</fullName>
                </value>
                <value>
                    <fullName>Non-Technical</fullName>
                </value>
                <value>
                    <fullName>PM Action</fullName>
                </value>
                <value>
                    <fullName>Pre-install</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Provisioning</fullName>
                </value>
                <value>
                    <fullName>PSR</fullName>
                </value>
                <value>
                    <fullName>Repair Field</fullName>
                </value>
                <value>
                    <fullName>Repair Remote</fullName>
                </value>
                <value>
                    <fullName>Replacement with No Return</fullName>
                </value>
                <value>
                    <fullName>Retail Support</fullName>
                </value>
                <value>
                    <fullName>Return for Credit</fullName>
                </value>
                <value>
                    <fullName>Return of Lease</fullName>
                </value>
                <value>
                    <fullName>Return of Lease Collect</fullName>
                </value>
                <value>
                    <fullName>Service Changes</fullName>
                </value>
                <value>
                    <fullName>Service Provisioning</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Technician Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerRequestType__c</fullName>
        <label>Customer Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_SuspectedAsset__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account past Due</fullName>
                </value>
                <value>
                    <fullName>Add/RemoveServices</fullName>
                </value>
                <value>
                    <fullName>Add/Upgrade Service</fullName>
                </value>
                <value>
                    <fullName>Add new role</fullName>
                </value>
                <value>
                    <fullName>Anable to Access/Login</fullName>
                </value>
                <value>
                    <fullName>Automated Call</fullName>
                </value>
                <value>
                    <fullName>Billing Issues</fullName>
                </value>
                <value>
                    <fullName>Bill Inquiry/Dispute</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
                <value>
                    <fullName>Call Center Esc</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t make calls</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t receive calls</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t Receive Mail - Any</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t Receive Mail - Specific Domain(s)</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t Send Mail - Any</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t Send Mail - Specific Domain(s)</fullName>
                </value>
                <value>
                    <fullName>Cancel Order</fullName>
                </value>
                <value>
                    <fullName>Cancel Transport</fullName>
                </value>
                <value>
                    <fullName>Cancel Voice</fullName>
                </value>
                <value>
                    <fullName>Cancel VSAT</fullName>
                </value>
                <value>
                    <fullName>Cannot Locate</fullName>
                </value>
                <value>
                    <fullName>Change Service</fullName>
                </value>
                <value>
                    <fullName>Change Services</fullName>
                </value>
                <value>
                    <fullName>Chronic site</fullName>
                </value>
                <value>
                    <fullName>Chronic Sites - Non Contract</fullName>
                </value>
                <value>
                    <fullName>Circuit provisioning</fullName>
                </value>
                <value>
                    <fullName>Client Request</fullName>
                </value>
                <value>
                    <fullName>Code Upgrade Cleanup</fullName>
                </value>
                <value>
                    <fullName>Community Support</fullName>
                </value>
                <value>
                    <fullName>Content Not Updating/Incorrect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>This field is used for the rules pertaining to Enterprise Accounts and Products.</description>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpiryDate__c</fullName>
        <description>This field is used for the rules pertaining to Enterprise Accounts and Products.</description>
        <label>Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FromCommissionDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Commission Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HNSProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HNS Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>HNS_Products__c.Product_Type__c</field>
                <operation>notEqual</operation>
                <value>BOM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HNS_Products__c</referenceTo>
        <relationshipLabel>Chronic Rules</relationshipLabel>
        <relationshipName>Chronic_Rules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_AccountCompanyId__c</fullName>
        <formula>Account__r.CBC_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Company Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Active__c</fullName>
        <formula>IF( ExpiryDate__c  &lt;  TODAY() , False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_AutoUnmarkChronicAccount__c</fullName>
        <description>This field holds the days after which the account will be marked unchronic if no chronic case are created in this period.</description>
        <inlineHelpText>If no chronic cases are created in the period(in days) specified by this field then the Account of this rule will be automatically flagged as not chronic.</inlineHelpText>
        <label>Unflag Chronic Account(in Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_Case_Type_Sub_Type__c</fullName>
        <formula>IF(TEXT( CaseType__c )&lt;&gt;&apos;&apos; &amp;&amp; TEXT( CaseSubType__c )&lt;&gt;&apos;&apos;,TEXT( CaseType__c ) &amp; &apos; / &apos; &amp; TEXT( CaseSubType__c ),IF(TEXT( CaseType__c )=&apos;&apos; &amp;&amp; TEXT( CaseSubType__c )=&apos;&apos;,&apos;&apos;,IF(TEXT( CaseType__c )&lt;&gt;&apos;&apos;,TEXT( CaseType__c ),TEXT( CaseSubType__c ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Type &amp; Sub-Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_SuspectedAsset__c</fullName>
        <label>Product Grouping</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CaseRecordType__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active QoS</fullName>
                </value>
                <value>
                    <fullName>Appliance</fullName>
                </value>
                <value>
                    <fullName>BOM</fullName>
                </value>
                <value>
                    <fullName>BYOB</fullName>
                </value>
                <value>
                    <fullName>Customer Gateway</fullName>
                </value>
                <value>
                    <fullName>Customer Tools</fullName>
                </value>
                <value>
                    <fullName>Digital Media</fullName>
                </value>
                <value>
                    <fullName>DVR</fullName>
                </value>
                <value>
                    <fullName>EMAIL</fullName>
                </value>
                <value>
                    <fullName>Field Maintenance</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Guest Services</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Helpdesk Support</fullName>
                </value>
                <value>
                    <fullName>Install Support</fullName>
                </value>
                <value>
                    <fullName>Key FOB</fullName>
                </value>
                <value>
                    <fullName>Modem</fullName>
                </value>
                <value>
                    <fullName>Premium Services</fullName>
                </value>
                <value>
                    <fullName>Router</fullName>
                </value>
                <value>
                    <fullName>Satellite Broadband</fullName>
                </value>
                <value>
                    <fullName>Satellite Narrowband</fullName>
                </value>
                <value>
                    <fullName>Secure LAN</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Switch</fullName>
                </value>
                <value>
                    <fullName>Terrestrial Wireless</fullName>
                </value>
                <value>
                    <fullName>Terrestrial Wireline</fullName>
                </value>
                <value>
                    <fullName>VADB</fullName>
                </value>
                <value>
                    <fullName>Voice</fullName>
                </value>
                <value>
                    <fullName>Wi-Fi</fullName>
                </value>
                <value>
                    <fullName>Wireless</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberofCases__c</fullName>
        <inlineHelpText>This field will contain the number of cases of the specified type that will add up while evaluating the account Account.</inlineHelpText>
        <label>Number of Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofChronicCase__c</fullName>
        <inlineHelpText>This field captures the number of chronic cases on an account that counts towards its chronic condition.</inlineHelpText>
        <label>Number of Chronic Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <description>This field contains all the values from the Case-Reassign Value.</description>
        <label>Queue</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced Billing</fullName>
                </value>
                <value>
                    <fullName>Affinitas Phoenix MOD</fullName>
                </value>
                <value>
                    <fullName>Affinitas Phoenix Universal</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
                <value>
                    <fullName>Consumer Auto Generated</fullName>
                </value>
                <value>
                    <fullName>CS Program Management NAD</fullName>
                </value>
                <value>
                    <fullName>DDAG</fullName>
                </value>
                <value>
                    <fullName>Enterprise Auto Generated</fullName>
                </value>
                <value>
                    <fullName>Enterprise Billing</fullName>
                </value>
                <value>
                    <fullName>Enterprise Billing - NAD</fullName>
                </value>
                <value>
                    <fullName>ESC Advanced Billing Agent</fullName>
                </value>
                <value>
                    <fullName>ESC Advanced Tech Agent</fullName>
                </value>
                <value>
                    <fullName>ESC Billing Level 1</fullName>
                </value>
                <value>
                    <fullName>ESC Chronic Site Team</fullName>
                </value>
                <value>
                    <fullName>ESC Control Desk</fullName>
                </value>
                <value>
                    <fullName>ESC Corporate CSM</fullName>
                </value>
                <value>
                    <fullName>ESC Digital Media</fullName>
                </value>
                <value>
                    <fullName>ESC Field Support Agent Terrestrial</fullName>
                </value>
                <value>
                    <fullName>ESC Field Support VSAT</fullName>
                </value>
                <value>
                    <fullName>ESC Frontline</fullName>
                </value>
                <value>
                    <fullName>ESC GEH</fullName>
                </value>
                <value>
                    <fullName>ESC Level 1 Agent</fullName>
                </value>
                <value>
                    <fullName>ESC Level 2 Agent</fullName>
                </value>
                <value>
                    <fullName>ESC Level 3 Agent</fullName>
                </value>
                <value>
                    <fullName>ESC Network Associates Team</fullName>
                </value>
                <value>
                    <fullName>ESC Onsite Management</fullName>
                </value>
                <value>
                    <fullName>ESC Post Install Provisioning</fullName>
                </value>
                <value>
                    <fullName>ESC Program Management Support</fullName>
                </value>
                <value>
                    <fullName>ESC Provisioning Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordTypeDeveloperName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Developer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <formula>IF(( RecordTypeDeveloperName__c == &apos;Consumer&apos;), &apos;Rule is applicable for Consumer Accounts&apos;, &apos;Rule is applicable for non-Consumer Accounts&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scope</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeIntervalDaysEA__c</fullName>
        <description>This time interval is for capturing the time which is to be used to evaluate an Enterprise Account</description>
        <inlineHelpText>This field captures the time for which the cases will be considered for chronic calculation. If no value is specified, it will take it as 0.</inlineHelpText>
        <label>Time Interval (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeIntervalDays__c</fullName>
        <description>This field captures the time for which the cases will be considered for calculation of the Product and Consumer Account</description>
        <inlineHelpText>This field captures the time for which the cases will be considered for chronic calculation. If no value is specified, it will take it as 0.</inlineHelpText>
        <label>Time Interval (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeIntervalMinutesEA__c</fullName>
        <description>This field captures the time within which an Enterprise Account is evaluated.</description>
        <inlineHelpText>This field captures the time (specified in Minutes) for chronic calculation.</inlineHelpText>
        <label>Time Interval (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeIntervalMinutes__c</fullName>
        <description>This field captures the duration within which chronic calculation for Enterprise Account</description>
        <inlineHelpText>This field captures the time (specified in Minutes) for chronic calculation.</inlineHelpText>
        <label>Time Interval (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Interval_Type__c</fullName>
        <inlineHelpText>If you select &quot;Calendar Month&quot;, and you have given &apos;10&apos; in the &apos;Time Interval (Days)&apos; field then all the cases in the last 10 months will be considerd. If you select &apos;Days&apos;, then all the cases in the last 10 days will be considered.</inlineHelpText>
        <label>Time Interval Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calendar Month</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalTimeDaysEA__c</fullName>
        <formula>IF( ISBLANK(TimeIntervalDaysEA__c ) ,  IF(ISBLANK( TimeIntervalMinutesEA__c ), 0, (TimeIntervalMinutesEA__c*0.000694444) ) , IF(ISBLANK( TimeIntervalMinutesEA__c ),(TimeIntervalDaysEA__c) ,( (TimeIntervalMinutesEA__c*0.000694444) + TimeIntervalDaysEA__c) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalTimeDaysEA</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalTimeDays__c</fullName>
        <formula>IF( ISBLANK(TimeIntervalDays__c ) ,  IF(ISBLANK( TimeIntervalMinutes__c ), 0, (TimeIntervalMinutes__c*0.000694444) ) , IF(ISBLANK( TimeIntervalMinutes__c ),(TimeIntervalDays__c) ,( (TimeIntervalMinutes__c*0.000694444) + TimeIntervalDays__c) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalTimeDays</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
</CustomObject>